--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "type-check": "vue-tsc --build"
   },
   "dependencies": {
+    "lucide-vue-next": "^0.542.0",
     "vue": "^3.5.17",
     "vue-i18n": "^12.0.0-alpha.3",
     "vue-router": "^4.5.1"
