--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "@vue/tsconfig": "^0.7.0",
     "npm-run-all2": "^8.0.4",
     "sass": "^1.92.0",
+    "shiki": "^3.12.2",
     "typescript": "~5.8.0",
+    "unplugin-vue-markdown": "^29.1.0",
     "vite": "^7.0.0",
     "vite-plugin-vue-devtools": "^7.7.7",
     "vue-tsc": "^2.2.10"
